--- a/MathCalc/MathCalc.vcxproj.filters
+++ b/MathCalc/MathCalc.vcxproj.filters
@@ -27,4 +27,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="resources\button.png">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
+    <Image Include="resources\buttons.png">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
