--- a/MathCalc/MathCalc.vcxproj.filters
+++ b/MathCalc/MathCalc.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="mathFunctions.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="buttonActions.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="stringFunctions.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mathFunctions.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="buttonActions.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="stringFunctions.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
